--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- important for mobile -->
     <title>Asmatullah Portfolio</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Sidebar -->
     <aside class="sidebar">
         <div class="profile-pic">
-            <img src="static/images/profile.png" alt="Asmatullah">
+            <img src="profile.png" alt="Asmatullah">
             <h3>Asmatullah</h3>
             <p>Python Developer</p>
         </div>
